--- a/app/src/main/res/layout/activity_input_trip.xml
+++ b/app/src/main/res/layout/activity_input_trip.xml
@@ -35,8 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="5dp"
-                android:text="공개"
-                tools:targetApi="ice_cream_sandwich" />
+                android:text="공개" />
         </RelativeLayout>
 
         <LinearLayout
@@ -97,11 +96,6 @@
                     android:textColor="@color/black"
                     android:textSize="25sp" />
             </LinearLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
         </LinearLayout>
 
         <LinearLayout
@@ -126,6 +120,10 @@
                 android:backgroundTint="#619CD6"
                 android:text="Button" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
         <LinearLayout
