--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,5 +3,5 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_logout"
         android:title="로그아웃"
-        app:showAsAction="never"/>
+        app:showAsAction="ifRoom"/>
 </menu>
