--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,11 @@
             android:layout_height="wrap_content"
             android:text="일기" />
 
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="후기" />
+
     </com.google.android.material.tabs.TabLayout>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
