--- a/app/src/main/res/layout/activity_diary2.xml
+++ b/app/src/main/res/layout/activity_diary2.xml
@@ -37,6 +37,34 @@
                     >
                 </Button>
 
+                <RadioGroup
+                    android:id="@+id/rg2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="1"
+                    >
+
+                    <RadioButton
+                        android:id="@+id/reviewId2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="공개" />
+                    <RadioButton
+                        android:id="@+id/secretId2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="비공개" />
+
+                </RadioGroup>
+
+                <TextView
+                    android:visibility="gone"
+                    android:id="@+id/rsCheck"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" ">
+                </TextView>
             </LinearLayout>
 
 
