--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -112,8 +112,8 @@
                 />
 
             <TextView
-                android:layout_width="wrap_content"
                 android:id="@+id/LoginId"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
                 android:text=""
