230208 저장4 base64tobitmap 테스트 완료. 디비상에 문자열 저장 부분 확인 필요, 다이어리 작성자 필요.

--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -120,6 +120,15 @@
                 >
             </TextView>
 
+            <TextView
+                android:id="@+id/imageUri"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text=""
+                >
+            </TextView>
+
 
 
         </LinearLayout>
