--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -111,26 +111,6 @@
                 android:hint="제목"
                 />
 
-            <TextView
-                android:id="@+id/LoginId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:text=""
-                >
-            </TextView>
-
-            <TextView
-                android:id="@+id/imageUri"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:text=""
-                >
-            </TextView>
-
-
-
         </LinearLayout>
 
         <LinearLayout
@@ -160,13 +140,14 @@
                 android:hint="오늘 하루를 기록해요"
                 android:inputType="none">
             </EditText>
+
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             >
-
             <Button
                 android:id="@+id/btnGallery"
                 android:layout_width="wrap_content"
@@ -183,6 +164,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="일기작성" />
+            <TextView
+                android:id="@+id/LoginId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text=""
+                >
+            </TextView>
+
+            <TextView
+                android:id="@+id/imageuri"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text=""
+                >
+            </TextView>
         </LinearLayout>
     </LinearLayout>
 
