--- a/app/src/main/res/layout/activity_diary_detail.xml
+++ b/app/src/main/res/layout/activity_diary_detail.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:padding="20dp"
     android:orientation="vertical">
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,18 +24,49 @@
                 android:id="@+id/listDateId1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="left"
                 android:text="현재 날짜"
                 android:textSize="16sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+            <Button
+                android:id="@+id/btnUpdate"
+                android:layout_marginLeft="20dp"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="수정"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                android:backgroundTint="#619CD6"/>
+
+            <Button
+                android:id="@+id/btnDelete"
+                android:layout_marginLeft="20dp"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="삭제"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                android:backgroundTint="#619CD6"/>
+        </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/picturelabel1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Image"
+            android:visibility="visible"
             android:textSize="18sp"/>
 
         <LinearLayout
@@ -47,34 +79,34 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:src="@drawable/sea"
+                android:visibility="visible"
                 android:layout_marginLeft="20dp" />
+
         </LinearLayout>
 
+        <ScrollView
+            android:id="@+id/bio_scroll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
             android:id="@+id/contentsTextView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/bm_font"
             android:text="내용"
             android:layout_weight="1"
             android:textSize="20sp" />
 
-        <Button
-            android:id="@+id/btnDelete"
-            android:layout_marginLeft="20dp"
-            android:layout_width="125dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="삭제"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:backgroundTint="#619CD6"/>
+
 <!--                <Button-->
 <!--                    android:id="@+id/btnUpdate"-->
 <!--                    android:layout_width="match_parent"-->
 <!--                    android:layout_height="wrap_content"-->
 <!--                    android:text="수정" />-->
+        </ScrollView>
 
     </LinearLayout>
+
+
 </LinearLayout>
