230208 저장8 수정창 작업완료 스프링 쪽 백 부분 레트로핏 완료 테스트 필요.

--- a/app/src/main/res/layout/activity_diary_update.xml
+++ b/app/src/main/res/layout/activity_diary_update.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" "
-            android:visibility="gone"></TextView>
+            android:visibility="visible"></TextView>
 
         <EditText
             android:id="@+id/listTitleId1"
@@ -159,11 +159,17 @@
 
         </ScrollView>
         <TextView
+            android:id="@+id/dno"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:visibility="visible"></TextView>
+        <TextView
             android:id="@+id/LoginId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
-            android:visibility="gone"></TextView>
+            android:visibility="visible"></TextView>
         <TextView
             android:id="@+id/imageuri"
             android:layout_width="match_parent"
