--- a/app/src/main/res/layout/activity_diary_detail.xml
+++ b/app/src/main/res/layout/activity_diary_detail.xml
@@ -34,7 +34,7 @@
             <Button
                 android:id="@+id/btnUpdate"
                 android:layout_marginLeft="20dp"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:text="수정"
@@ -46,10 +46,21 @@
             <Button
                 android:id="@+id/btnDelete"
                 android:layout_marginLeft="20dp"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:text="삭제"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                android:backgroundTint="#619CD6"/>
+            <Button
+                android:id="@+id/btnMainView"
+                android:layout_marginLeft="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="메인"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_weight="1"
