--- a/app/src/main/res/layout/activity_diary_update.xml
+++ b/app/src/main/res/layout/activity_diary_update.xml
@@ -18,7 +18,7 @@
             android:id="@+id/rsCheck"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" "
+            android:text="비공개"
             android:visibility="visible"></TextView>
 
         <EditText
