230210 저장4  영상 base64 인코딩 확인 완료. 디비에 저장 완료. 상세화면에 영상 가져오기 , 디코딩 필요하고, 워크벤치 조회시 지연 심함. 앱에서 조회시 조회는 아직 됨. 동영상은 파이어베이스 스토어에 저장해서 가져오기 생각. 파일통째로, 현재는 영상을 base64 테스트중.

--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -315,6 +315,13 @@
                 android:layout_height="wrap_content"
                 android:text=""
                 android:visibility="gone"></TextView>
+
+            <TextView
+                android:id="@+id/videouri"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:visibility="gone"></TextView>
         </LinearLayout>
     </LinearLayout>
 
