--- a/app/src/main/res/layout/activity_diary_detail.xml
+++ b/app/src/main/res/layout/activity_diary_detail.xml
@@ -92,14 +92,27 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/picture1"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:src="@drawable/sea"
+                    android:layout_marginRight="20dp"
                     android:visibility="visible"
                     android:layout_marginLeft="20dp" />
 
+                <VideoView
+                    android:id="@+id/VideoImage2"
+                    android:layout_width="100dp"
+                    android:layout_height="150dp"
+                    >
+
+                </VideoView>
+            </LinearLayout>
                 <TextView
                     android:id="@+id/contentsTextView"
                     android:layout_width="match_parent"
