--- a/app/src/main/res/layout/activity_diary_update.xml
+++ b/app/src/main/res/layout/activity_diary_update.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".DiaryFiles.DiaryUpdateActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -88,6 +89,18 @@
                 android:backgroundTint="#619CD6"/>
 
             <Button
+                android:id="@+id/btnVideo"
+                android:layout_marginLeft="20dp"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="영상첨부"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                android:backgroundTint="#619CD6"/>
+
+            <Button
                 android:id="@+id/btnUpdate"
                 android:layout_marginLeft="20dp"
                 android:layout_width="50dp"
@@ -105,7 +118,7 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:text="삭제"
+                android:text="삭제하기"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_weight="1"
@@ -136,14 +149,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/picture1"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:src="@drawable/sea"
+                    android:layout_marginRight="20dp"
                     android:visibility="visible"
                     android:layout_marginLeft="20dp" />
+
+                <VideoView
+                    android:id="@+id/VideoImage2"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    >
+
+                </VideoView>
+            </LinearLayout>
 
                 <EditText
                     android:id="@+id/contentsTextView"
@@ -176,7 +202,13 @@
             android:layout_height="wrap_content"
             android:text=""
             android:visibility="gone"></TextView>
+        <TextView
+            android:id="@+id/videouri"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:visibility="gone"></TextView>
+    </LinearLayout>
     </LinearLayout>
 
 
-</LinearLayout>
