--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -231,16 +231,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="샘플사진"
+                    android:gravity="center"
+                    android:textAlignment="center"
+                    android:visibility="visible"></TextView>
             <ImageView
                 android:id="@+id/GalleryImage"
-                android:layout_width="100dp"
-                android:layout_height="150dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 tools:src="@tools:sample/avatars">
 
             </ImageView>
-
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="샘플영상"
+                    android:gravity="center"
+                    android:textAlignment="center"
+                    android:visibility="visible"></TextView>
             <VideoView
                 android:id="@+id/VideoImage"
                 android:layout_width="100dp"
@@ -249,6 +270,18 @@
                 >
 
             </VideoView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="업로드영상"
+                    android:gravity="center"
+                    android:textAlignment="center"
+                    android:visibility="visible"></TextView>
             <VideoView
                 android:id="@+id/VideoImage2"
                 android:layout_width="100dp"
@@ -256,6 +289,7 @@
                 >
 
             </VideoView>
+            </LinearLayout>
 
         </LinearLayout>
 
