230214 동영상 선택 후, 일기 작성, 디비에 영상 위치만 일단 저장. 파일 위치는 따로 파일서버에 저장 예정. 동영상 수정 테스트 완료.

--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -236,11 +236,10 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="샘플사진"
                     android:gravity="center"
-                    android:textAlignment="center"
                     android:visibility="visible"></TextView>
             <ImageView
                 android:id="@+id/GalleryImage"
@@ -256,11 +255,10 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:text="샘플영상"
                     android:gravity="center"
-                    android:textAlignment="center"
+                    android:text="샘플영상"
                     android:visibility="visible"></TextView>
             <VideoView
                 android:id="@+id/VideoImage"
@@ -276,11 +274,10 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="업로드영상"
                     android:gravity="center"
-                    android:textAlignment="center"
                     android:visibility="visible"></TextView>
             <VideoView
                 android:id="@+id/VideoImage2"
