230327 4번째 탭, 5번째 탭 붙이기, 로그인에 구글 인증 버튼 붙이기, 구글인증 가능, 이메일 인증 확인 필요, 3,4,5 탭 클릭시 오류 남 확인하기.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,5 +80,13 @@
             android:backgroundTint="#619CD6"
             android:textSize="20sp"
             android:text="Sign up" />
+
+        <Button
+            android:id="@+id/googleBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#619CD6"
+            android:textSize="20sp"
+            android:text="인증후 파베확인하기" />
     </LinearLayout>
 </LinearLayout>
