--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -243,7 +243,7 @@
                     android:visibility="visible"></TextView>
             <ImageView
                 android:id="@+id/GalleryImage"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 tools:src="@tools:sample/avatars">
@@ -306,7 +306,8 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnGallery"
