--- a/app/src/main/res/layout/fragment_fire_base_store_d_b.xml
+++ b/app/src/main/res/layout/fragment_fire_base_store_d_b.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+
 
     <TextView
         android:id="@+id/logoutTextView"
@@ -27,8 +29,8 @@
         app:fabSize="normal"
         app:rippleColor="@color/white"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginBottom="24dp"
-        android:layout_marginRight="24dp"/>
+        android:layout_marginLeft="24dp"/>
 
 </RelativeLayout>
