--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,5 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_logout"
         android:title="로그아웃"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/menu_main_auth"
+        android:title="인증"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/menu_add_gallery"
+        android:title="gallery"
+        android:icon="@android:drawable/ic_menu_gallery"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_add_save"
+        android:title="저장"
+        app:showAsAction="never"/>
+
 </menu>
