--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -28,6 +28,20 @@
                 android:layout_marginLeft="10dp"
                 android:textColor="#727272"
                 android:textSize="12sp" />
+        <Button
+            android:id="@+id/updateFBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+
+            android:text="수정"/>
+        <Button
+            android:id="@+id/deleteFBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="삭제"/>
+
 
     </LinearLayout>
 
