230328 파이어베이스 스토어, 스토리지 비디오 추가 확인 완료

--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -53,6 +53,13 @@
         android:layout_marginBottom="5dp"
         android:scaleType="fitXY" />
 
+    <VideoView
+        android:id="@+id/itemVideoView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        
+        />
+
     <TextView
         android:id="@+id/itemContentView"
         android:layout_width="match_parent"
