--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -16,7 +16,15 @@
         android:id="@+id/addImageView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        android:visibility="gone"/>
+
+    <VideoView
+        android:id="@+id/addVideoView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:visibility="gone"
+        />
 
     <EditText
         android:id="@+id/addEditView"
