--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -51,13 +51,14 @@
         android:layout_height="200dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="5dp"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        android:visibility="gone"/>
 
     <VideoView
         android:id="@+id/itemVideoView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        
+        android:visibility="gone"
         />
 
     <TextView
