--- a/app/src/main/res/layout/activity_fire_db_detail.xml
+++ b/app/src/main/res/layout/activity_fire_db_detail.xml
@@ -76,7 +76,15 @@
         android:layout_height="200dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="5dp"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        android:visibility="gone"/>
+
+    <VideoView
+        android:id="@+id/itemVideoView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:visibility="gone"
+        />
 
     <EditText
         android:id="@+id/itemContentView"
