230328 파이어베이스 스토어, 스토리지 수정 확인 완료2

--- a/app/src/main/res/layout/activity_fire_db_detail.xml
+++ b/app/src/main/res/layout/activity_fire_db_detail.xml
@@ -45,6 +45,12 @@
                 android:layout_marginLeft="20dp"
                 android:text="사진"/>
             <Button
+                android:id="@+id/videoUpBtn"
+                android:layout_width="75dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="영상"/>
+            <Button
                 android:id="@+id/updateFBtn"
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
@@ -57,12 +63,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:text="삭제"/>
-            <Button
-                android:id="@+id/mainBtn"
-                android:layout_width="75dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="메인"/>
 
         </LinearLayout>
 
